# CppAppTemplate

./: CMakeLists.txt  Makefile  README.md
inc/impl/example/: ExampleApp.h
src/example/: ExampleApp.cpp
